--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "joi": "^14.3.1"
+  },
+  "devDependencies": {
+    "mongoose": "^5.4.9"
   }
 }
